角色功能添加
