# docs/swagger.json
@@ -123,6 +123,135 @@
                 }
             }
         },
+        "/v1/role/add": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "新增角色",
+                "parameters": [
+                    {
+                        "description": "新增参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/check_form.AddMenu"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true,\"returnCode\":200,\"msg\":\"OK\",data\":{}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/role/delete": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "删除角色",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "角色ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true,\"returnCode\":200,\"msg\":\"OK\",data\":{}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/role/list": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "角色列表",
+                "parameters": [
+                    {
+                        "description": "角色搜索参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/check_form.AddMenu"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true,\"returnCode\":200,\"msg\":\"OK\",data\":{}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/role/update": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "修改角色",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "角色ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true,\"returnCode\":200,\"msg\":\"OK\",data\":{}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/role/view": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "查看角色",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "角色ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true,\"returnCode\":200,\"msg\":\"OK\",data\":{}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/user/login": {
             "post": {
                 "produces": [
